practica2/ejemplo2.output
Gramática

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: '\n'
    4     | exp '\n'

    5 exp: NUM
    6    | exp '+' exp
    7    | exp '-' exp
    8    | exp '*' exp
    9    | exp '/' exp
   10    | '-' exp
   11    | exp '^' exp
   12    | '(' exp ')'


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4
'(' (40) 12
')' (41) 12
'*' (42) 8
'+' (43) 6
'-' (45) 7 10
'/' (47) 9
'^' (94) 11
error (256)
NUM (258) 5
NEG (259)


No terminales con las reglas donde aparecen

$accept (13)
    en la izquierda: 0
input (14)
    en la izquierda: 1 2, en la derecha: 0 2
line (15)
    en la izquierda: 3 4, en la derecha: 2
exp (16)
    en la izquierda: 5 6 7 8 9 10 11 12, en la derecha: 4 6 7 8 9 10
    11 12


Estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


Estado 1

    0 $accept: input . $end
    2 input: input . line

    $end  desplazar e ir al estado 2
    NUM   desplazar e ir al estado 3
    '-'   desplazar e ir al estado 4
    '\n'  desplazar e ir al estado 5
    '('   desplazar e ir al estado 6

    line  ir al estado 7
    exp   ir al estado 8


Estado 2

    0 $accept: input $end .

    $default  aceptar


Estado 3

    5 exp: NUM .

    $default  reduce usando la regla 5 (exp)


Estado 4

   10 exp: '-' . exp

    NUM  desplazar e ir al estado 3
    '-'  desplazar e ir al estado 4
    '('  desplazar e ir al estado 6

    exp  ir al estado 9


Estado 5

    3 line: '\n' .

    $default  reduce usando la regla 3 (line)


Estado 6

   12 exp: '(' . exp ')'

    NUM  desplazar e ir al estado 3
    '-'  desplazar e ir al estado 4
    '('  desplazar e ir al estado 6

    exp  ir al estado 10


Estado 7

    2 input: input line .

    $default  reduce usando la regla 2 (input)


Estado 8

    4 line: exp . '\n'
    6 exp: exp . '+' exp
    7    | exp . '-' exp
    8    | exp . '*' exp
    9    | exp . '/' exp
   11    | exp . '^' exp

    '-'   desplazar e ir al estado 11
    '+'   desplazar e ir al estado 12
    '*'   desplazar e ir al estado 13
    '/'   desplazar e ir al estado 14
    '^'   desplazar e ir al estado 15
    '\n'  desplazar e ir al estado 16


Estado 9

    6 exp: exp . '+' exp
    7    | exp . '-' exp
    8    | exp . '*' exp
    9    | exp . '/' exp
   10    | '-' exp .
   11    | exp . '^' exp

    '^'  desplazar e ir al estado 15

    $default  reduce usando la regla 10 (exp)


Estado 10

    6 exp: exp . '+' exp
    7    | exp . '-' exp
    8    | exp . '*' exp
    9    | exp . '/' exp
   11    | exp . '^' exp
   12    | '(' exp . ')'

    '-'  desplazar e ir al estado 11
    '+'  desplazar e ir al estado 12
    '*'  desplazar e ir al estado 13
    '/'  desplazar e ir al estado 14
    '^'  desplazar e ir al estado 15
    ')'  desplazar e ir al estado 17


Estado 11

    7 exp: exp '-' . exp

    NUM  desplazar e ir al estado 3
    '-'  desplazar e ir al estado 4
    '('  desplazar e ir al estado 6

    exp  ir al estado 18


Estado 12

    6 exp: exp '+' . exp

    NUM  desplazar e ir al estado 3
    '-'  desplazar e ir al estado 4
    '('  desplazar e ir al estado 6

    exp  ir al estado 19


Estado 13

    8 exp: exp '*' . exp

    NUM  desplazar e ir al estado 3
    '-'  desplazar e ir al estado 4
    '('  desplazar e ir al estado 6

    exp  ir al estado 20


Estado 14

    9 exp: exp '/' . exp

    NUM  desplazar e ir al estado 3
    '-'  desplazar e ir al estado 4
    '('  desplazar e ir al estado 6

    exp  ir al estado 21


Estado 15

   11 exp: exp '^' . exp

    NUM  desplazar e ir al estado 3
    '-'  desplazar e ir al estado 4
    '('  desplazar e ir al estado 6

    exp  ir al estado 22


Estado 16

    4 line: exp '\n' .

    $default  reduce usando la regla 4 (line)


Estado 17

   12 exp: '(' exp ')' .

    $default  reduce usando la regla 12 (exp)


Estado 18

    6 exp: exp . '+' exp
    7    | exp . '-' exp
    7    | exp '-' exp .
    8    | exp . '*' exp
    9    | exp . '/' exp
   11    | exp . '^' exp

    '*'  desplazar e ir al estado 13
    '/'  desplazar e ir al estado 14
    '^'  desplazar e ir al estado 15

    $default  reduce usando la regla 7 (exp)


Estado 19

    6 exp: exp . '+' exp
    6    | exp '+' exp .
    7    | exp . '-' exp
    8    | exp . '*' exp
    9    | exp . '/' exp
   11    | exp . '^' exp

    '*'  desplazar e ir al estado 13
    '/'  desplazar e ir al estado 14
    '^'  desplazar e ir al estado 15

    $default  reduce usando la regla 6 (exp)


Estado 20

    6 exp: exp . '+' exp
    7    | exp . '-' exp
    8    | exp . '*' exp
    8    | exp '*' exp .
    9    | exp . '/' exp
   11    | exp . '^' exp

    '^'  desplazar e ir al estado 15

    $default  reduce usando la regla 8 (exp)


Estado 21

    6 exp: exp . '+' exp
    7    | exp . '-' exp
    8    | exp . '*' exp
    9    | exp . '/' exp
    9    | exp '/' exp .
   11    | exp . '^' exp

    '^'  desplazar e ir al estado 15

    $default  reduce usando la regla 9 (exp)


Estado 22

    6 exp: exp . '+' exp
    7    | exp . '-' exp
    8    | exp . '*' exp
    9    | exp . '/' exp
   11    | exp . '^' exp
   11    | exp '^' exp .

    '^'  desplazar e ir al estado 15

    $default  reduce usando la regla 11 (exp)
